# python-batch-processing

./: .gitignore  LICENSE  README.md  __init__.py  benchmark.py  main.py  pyproject.toml
src/: context.py
src/batch_processing/: __init__.py  configuration.py  gen_mp_queue.py  logger.py
src/batch_processing/batch_processor/: __init__.py  configuration.py  exception_info.py  factory.py
src/batch_processing/iterable_batch_processor/: __init__.py  iterable_batch_processor.py
src/batch_processing/monitor/: __init__.py  configuration.py  context.py  factory.py
src/batch_processing/worker_pool/: __init__.py  factory.py  worker.py  worker_pool.py
src/batch_processor/: batch_processor.py  batch_worker.py  context.py  worker_reported_error.py
src/monitor/: monitor.py
src/worker_pool/: worker_fatal_error.py
tests/: gen_mp_queue_test.py  gen_mp_queue_tests.py
tests/batch_processor_tests/: test_batch_processor.py
tests/iterable_batch_processor_tests/: test_iterable_batch_processor.py
tests/monitor_tests/: monitor_test.py
tests/worker_pool_tests/: worker_pool_test.py
